seo before backlink

--- a/article-office-moving.html
+++ b/article-office-moving.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>نقل المكاتب باحترافية | حور - نقل عفش الكويت 🏢 66401171</title>
+  <title>نقل المكاتب | حور - نقل عفش الكويت</title>
   
   <!-- Enhanced Meta Description -->
   <meta name="description" content="كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن - دليل شامل لنقل المكاتب باحترافية">
@@ -220,7 +220,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/fast-1.jpg" alt="نقل سريع">
+                    <img src="assets/img/articles/fast-1.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور">
                     <div class="card-body">
                       <h4>أسرار النقل السريع</h4>
                       <p>تعرف على أفضل الطرق لنقل عفشك بسرعة وأمان</p>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/secure-1.jpg" alt="تغليف آمن">
+                    <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور">
                     <div class="card-body">
                       <h4>دليل التغليف الآمن</h4>
                       <p>أفضل الطرق لتغليف أثاثك وحمايته أثناء النقل</p>
@@ -244,7 +244,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/seazon-1.jpg" alt="نقل موسمي">
+                    <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش">
                     <div class="card-body">
                       <h4>النقل الموسمي</h4>
                       <p>أفضل الأوقات لنقل عفشك في الكويت</p>
