--- a/article-packing-guide.html
+++ b/article-packing-guide.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>دليل التغليف الآمن للأثاث | حور - نقل عفش الكويت 📦 66401171</title>
+  <title>دليل التغليف الآمن | حور - نقل عفش الكويت</title>
   
   <!-- Enhanced Meta Description -->
   <meta name="description" content="دليل شامل للتغليف الآمن للأثاث - أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية لحمايتها أثناء النقل">
@@ -227,7 +227,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/fast-1.jpg" alt="نقل سريع">
+                    <img src="assets/img/articles/fast-1.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور">
                     <div class="card-body">
                       <h4>أسرار النقل السريع</h4>
                       <p>تعرف على أفضل الطرق لنقل عفشك بسرعة وأمان</p>
@@ -239,7 +239,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/seazon-1.jpg" alt="نقل موسمي">
+                    <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش">
                     <div class="card-body">
                       <h4>النقل الموسمي</h4>
                       <p>أفضل الأوقات لنقل عفشك في الكويت</p>
@@ -251,7 +251,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/naql-1.jpg" alt="نقل مكاتب">
+                    <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات">
                     <div class="card-body">
                       <h4>نقل المكاتب باحترافية</h4>
                       <p>كيف تنقل مكتبك بدون توقف العمل</p>
