--- a/article-seasonal-moving.html
+++ b/article-seasonal-moving.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>النقل الموسمي في الكويت | حور - نقل عفش الكويت 🌤️ 66401171</title>
+  <title>النقل الموسمي | حور - نقل عفش الكويت</title>
   
   <!-- Enhanced Meta Description -->
   <meta name="description" content="توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث - أفضل أوقات نقل العفش في الكويت">
@@ -226,7 +226,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/fast-1.jpg" alt="نقل سريع">
+                    <img src="assets/img/articles/fast-1.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور">
                     <div class="card-body">
                       <h4>أسرار النقل السريع</h4>
                       <p>تعرف على أفضل الطرق لنقل عفشك بسرعة وأمان</p>
@@ -238,7 +238,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/secure-1.jpg" alt="تغليف آمن">
+                    <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور">
                     <div class="card-body">
                       <h4>دليل التغليف الآمن</h4>
                       <p>أفضل الطرق لتغليف أثاثك وحمايته أثناء النقل</p>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/naql-1.jpg" alt="نقل مكاتب">
+                    <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات">
                     <div class="card-body">
                       <h4>نقل المكاتب باحترافية</h4>
                       <p>كيف تنقل مكتبك بدون توقف العمل</p>
