--- a/article-speed-moving.html
+++ b/article-speed-moving.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>أسرار النقل السريع للعفش | حور - نقل عفش الكويت 🚚 66401171</title>
+  <title>النقل السريع للعفش | حور - نقل عفش الكويت</title>
   
   <!-- Enhanced Meta Description -->
   <meta name="description" content="تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
@@ -220,7 +220,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/secure-1.jpg" alt="تغليف آمن">
+                    <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور">
                     <div class="card-body">
                       <h4>دليل التغليف الآمن</h4>
                       <p>أفضل الطرق لتغليف أثاثك وحمايته أثناء النقل</p>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/seazon-1.jpg" alt="نقل موسمي">
+                    <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش">
                     <div class="card-body">
                       <h4>النقل الموسمي</h4>
                       <p>أفضل الأوقات لنقل عفشك في الكويت</p>
@@ -244,7 +244,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="related-article-card">
-                    <img src="assets/img/articles/naql-1.jpg" alt="نقل مكاتب">
+                    <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات">
                     <div class="card-body">
                       <h4>نقل المكاتب باحترافية</h4>
                       <p>كيف تنقل مكتبك بدون توقف العمل</p>
