--- a/article.html
+++ b/article.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>خدمات النقل والتغليف الاحترافية</title>
+  <title>خدمات النقل | حور - نقل عفش الكويت</title>
   <meta name="description" content="خدمات نقل وتغليف أثاث متكاملة بأسعار منافسة وجودة عالية">
   <meta name="keywords" content="نقل أثاث, تغليف أثاث, فك وتركيب, خدمات نقل">
 
@@ -40,9 +40,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">الرئيسية</a></li>
-          <li><a href="#services">خدماتنا</a></li>
-          <li><a href="#articles">المقالات</a></li>
-          <li><a href="#contact">اتصل بنا</a></li>
+          <li><a href="service-details.html">خدماتنا</a></li>
+          <li><a href="portfolio-details.html">أعمالنا</a></li>
+          <li><a href="article-view.html" class="active">مقالات</a></li>
+          <li><a href="index.html#contact">تواصل معنا</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -113,7 +114,7 @@
         <!-- Article 1 -->
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="article-card">
-            <img src="assets/img/moving1.jpg" class="article-img" alt="نقل أثاث">
+            <img src="assets/img/moving1.jpg" class="article-img" alt="خدمة نقل أثاث احترافية في الكويت - فريق حور المتخصص">
             <div class="article-body">
               <h3>نقل آثاثك بأمان وسرعة مع فريق محترف</h3>
               <p>في عالم سريع الخطى، يصبح نقل الآثاث تحديًا كبيرًا للكثيرين. مع خدماتنا المتكاملة، نضمن لك نقلًا آمنًا وسريعًا دون أي خسائر أو تلف. فريقنا المدرب جيدًا يقوم بجميع المراحل بدءًا من الفك والتغليف، مرورًا بالنقل، ووصولًا إلى التركيب في المكان الجديد.</p>
@@ -125,7 +126,7 @@
         <!-- Article 2 -->
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
           <div class="article-card">
-            <img src="assets/img/packing.jpg" class="article-img" alt="تغليف أثاث">
+            <img src="assets/img/packing.jpg" class="article-img" alt="تغليف أثاث آمن ومحترف - مواد عالية الجودة من حور">
             <div class="article-body">
               <h3>لماذا تختار فريقنا لنقل وتغليف أثاثك؟</h3>
               <p>يمتلك فريقنا سنوات من الخبرة في مجال نقل وتغليف الآثاث، مما يجعلك في أيدٍ أمينة. نقدم حلولًا شاملة تشمل الفك والتركيب بأدوات متخصصة، تغليف بمواد عالية الجودة، نقل بواسطة سيارات مجهزة، وتركيب في المكان الجديد بدقة واحترافية.</p>
@@ -137,7 +138,7 @@
         <!-- Article 3 -->
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="article-card">
-            <img src="assets/img/furniture-care.jpg" class="article-img" alt="حماية الأثاث">
+            <img src="assets/img/furniture-care.jpg" class="article-img" alt="حماية الأثاث أثناء النقل - نصائح من خبراء حور">
             <div class="article-body">
               <h3>كيف تحافظ على أثاثك أثناء النقل؟</h3>
               <p>النقل الآمن للآثاث يتطلب أكثر من مجرد وضع القطع في سيارة. إليك بعض النصائح من خبرائنا: الفك الصحيح باستخدام الأدوات المناسبة، التغليف الجيد باستخدام الفقاعات والورق المقوى، والتخزين المؤقت بوضع القطع الثقيلة في الأسفل والخفيفة في الأعلى.</p>
@@ -148,6 +149,117 @@
       </div>
     </div>
   </section>
+
+  <!-- ======= Related Articles Section ======= -->
+  <section id="related-articles" class="related-articles section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-title text-center">
+            <h2>مقالات أخرى مفيدة</h2>
+            <p>اكتشف المزيد من النصائح والخبرات في نقل العفش</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row gy-4">
+        <div class="col-lg-3 col-md-6">
+          <div class="article-card">
+            <img src="assets/img/articles/fast-2.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور" class="img-fluid">
+            <div class="article-content">
+              <h4>أسرار النقل السريع</h4>
+              <p>تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته</p>
+              <a href="article-speed-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <div class="article-card">
+            <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور" class="img-fluid">
+            <div class="article-content">
+              <h4>دليل التغليف الآمن</h4>
+              <p>أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية</p>
+              <a href="article-packing-guide.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <div class="article-card">
+            <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش" class="img-fluid">
+            <div class="article-content">
+              <h4>النقل الموسمي</h4>
+              <p>توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث</p>
+              <a href="article-seasonal-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <div class="article-card">
+            <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات" class="img-fluid">
+            <div class="article-content">
+              <h4>نقل المكاتب</h4>
+              <p>كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن</p>
+              <a href="article-office-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Related Services -->
+      <div class="row mt-5">
+        <div class="col-lg-12">
+          <div class="section-title text-center">
+            <h3>خدماتنا المتخصصة</h3>
+            <p>اكتشف خدماتنا المتكاملة في نقل العفش</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6">
+          <div class="service-card">
+            <div class="service-image">
+              <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر بأعلى جودة - خدمات حور" class="img-fluid">
+            </div>
+            <div class="service-content">
+              <h3>تغليف عالي الجودة</h3>
+              <p>خدمة تغليف الأثاث بأعلى جودة مع مواد متينة</p>
+              <a href="portfolio-house1.html" class="btn btn-primary">عرض التفاصيل</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="service-card">
+            <div class="service-image">
+              <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب أثاث باحترافية - خبراء حور" class="img-fluid">
+            </div>
+            <div class="service-content">
+              <h3>فك وتركيب احترافي</h3>
+              <p>فك وتركيب الأثاث بأدوات خاصة وخبرة عالية</p>
+              <a href="portfolio-office1.html" class="btn btn-primary">عرض التفاصيل</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="service-card">
+            <div class="service-image">
+              <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات نقل عفش مبطنة ومجهزة - حور" class="img-fluid">
+            </div>
+            <div class="service-content">
+              <h3>سيارات مجهزة</h3>
+              <p>سيارات نقل مبطنة ومجهزة خصيصاً لنقل العفش</p>
+              <a href="portfolio-appliances1.html" class="btn btn-primary">عرض التفاصيل</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!-- /Related Articles Section -->
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact section-bg">
