--- a/portfolio-storage1.html
+++ b/portfolio-storage1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>خدمات التخزين - هور للنقل والتخزين</title>
+  <title>خدمات التخزين | حور - نقل عفش الكويت</title>
   <meta content="خدمات التخزين الآمنة والمتخصصة من هور للنقل والتخزين. حلول تخزين مرنة وآمنة لجميع احتياجاتك" name="description">
   <meta content="تخزين, مستودعات, تخزين آمن, هور, نقل وتخزين" name="keywords">
 
@@ -56,7 +56,7 @@
         <!-- Added aria-label for logo link -->
         <a href="index.html" class="logo d-flex align-items-center" aria-label="الصفحة الرئيسية">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="assets/img/logo-rmbg.png" alt="حور لنقل العفش">
+          <img src="assets/img/logo-rmbg.png" alt="حور لنقل العفش - أفضل شركة نقل أثاث في الكويت">
           <!-- <img src="assets/img/logo.png" alt="حور لنقل العفش">  -->
           <h1 class="sitename">حور</h1>
         </a>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-lg-4">
             <div class="text-center">
-              <img src="assets/img/portfolio/item-7.jpg" alt="خدمات التخزين" class="img-fluid rounded-3 shadow-lg">
+              <img src="assets/img/portfolio/item-7.jpg" alt="خدمات التخزين الآمنة - مستودعات حور" class="img-fluid rounded-3 shadow-lg">
             </div>
           </div>
         </div>
@@ -256,7 +256,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="portfolio-card fade-in-up">
               <div class="portfolio-image">
-                <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر" loading="lazy">
+                <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر بأعلى جودة - خدمات حور" loading="lazy">
               </div>
               <div class="portfolio-content">
                 <h4>تغليف أثاث فاخر</h4>
@@ -270,7 +270,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="portfolio-card fade-in-up">
               <div class="portfolio-image">
-                <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب باحتراف" loading="lazy">
+                <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب أثاث باحترافية - خبراء حور" loading="lazy">
               </div>
               <div class="portfolio-content">
                 <h4>فك وتركيب باحتراف</h4>
@@ -284,7 +284,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="portfolio-card fade-in-up">
               <div class="portfolio-image">
-                <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات مبطنة ومجهزة" loading="lazy">
+                <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات نقل عفش مبطنة ومجهزة - حور" loading="lazy">
               </div>
               <div class="portfolio-content">
                 <h4>سيارات مبطنة ومجهزة</h4>
