--- a/service-details.html
+++ b/service-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171 - تفاصيل الخدمة</title>
+  <title>تفاصيل الخدمة | حور - نقل عفش الكويت</title>
   <meta name="description" content="خدمات نقل العفش في الكويت من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171">
   <meta name="keywords" content="نقل عفش الكويت, نقل أثاث الكويت, فك وتركيب أثاث, شركة نقل عفش, Home Mover, تغليف عفش, نقل سريع, 66401171, نقل عفش من الباب للباب, شركة نقل موثوقة الكويت, نقل عفش رخيص, أفضل شركة نقل عفش, خدمات نقل العفش, نقل أثاث محترف, نقل مكاتب, نقل منازل, نقل أجهزة كهربائية, نقل أثاث فاخر, تغليف الأثاث, نقل معدات ثقيلة, نقل بضائع تجارية, نقل شقق صغيرة, نقل الفلل, الكويت">
   <link rel="canonical" href="https://naqlafsha-hoor.com/service-details.html" />
@@ -99,29 +99,11 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#team">Team</a></li>
-            <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Dropdown 1</a></li>
-                <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                  <ul>
-                    <li><a href="#">Deep Dropdown 1</a></li>
-                    <li><a href="#">Deep Dropdown 2</a></li>
-                    <li><a href="#">Deep Dropdown 3</a></li>
-                    <li><a href="#">Deep Dropdown 4</a></li>
-                    <li><a href="#">Deep Dropdown 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Dropdown 2</a></li>
-                <li><a href="#">Dropdown 3</a></li>
-                <li><a href="#">Dropdown 4</a></li>
-              </ul>
-            </li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html">الرئيسية</a></li>
+            <li><a href="service-details.html" class="active">خدماتنا</a></li>
+            <li><a href="portfolio-details.html">أعمالنا</a></li>
+            <li><a href="article-view.html">مقالات</a></li>
+            <li><a href="index.html#contact">تواصل معنا</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -183,6 +165,136 @@
       </div>
 
     </section><!-- /Service Details Section -->
+
+    <!-- Related Services Section -->
+    <section id="related-services" class="related-services section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="section-title text-center">
+              <h2>خدماتنا المتكاملة</h2>
+              <p>اكتشف المزيد من خدماتنا المتخصصة في نقل العفش</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row gy-4">
+          <!-- Portfolio Services -->
+          <div class="col-lg-4 col-md-6">
+            <div class="service-card">
+              <div class="service-image">
+                <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر بأعلى جودة - خدمات حور" class="img-fluid">
+              </div>
+              <div class="service-content">
+                <h3>تغليف عالي الجودة</h3>
+                <p>خدمة تغليف الأثاث بأعلى جودة مع مواد متينة وطبقات حماية متعددة</p>
+                <a href="portfolio-house1.html" class="btn btn-primary">عرض التفاصيل</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="service-card">
+              <div class="service-image">
+                <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب أثاث باحترافية - خبراء حور" class="img-fluid">
+              </div>
+              <div class="service-content">
+                <h3>فك وتركيب احترافي</h3>
+                <p>فك وتركيب الأثاث الخشبي والمعدني بأدوات خاصة وخبرة عالية</p>
+                <a href="portfolio-office1.html" class="btn btn-primary">عرض التفاصيل</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="service-card">
+              <div class="service-image">
+                <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات نقل عفش مبطنة ومجهزة - حور" class="img-fluid">
+              </div>
+              <div class="service-content">
+                <h3>سيارات مجهزة</h3>
+                <p>سيارات نقل مبطنة ومجهزة خصيصاً لنقل العفش مع حماية من الصدمات</p>
+                <a href="portfolio-appliances1.html" class="btn btn-primary">عرض التفاصيل</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Related Articles -->
+        <div class="row mt-5">
+          <div class="col-lg-12">
+            <div class="section-title text-center">
+              <h3>مقالات مفيدة</h3>
+              <p>تعرف على نصائح وخبرات نقل العفش</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row gy-4">
+          <div class="col-lg-3 col-md-6">
+            <div class="article-card">
+              <img src="assets/img/articles/fast-2.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور" class="img-fluid">
+              <div class="article-content">
+                <h4>النقل السريع</h4>
+                <p>أسرار نقل العفش في وقت قياسي</p>
+                <a href="article-speed-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="article-card">
+              <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور" class="img-fluid">
+              <div class="article-content">
+                <h4>دليل التغليف</h4>
+                <p>طرق التغليف الآمن للأثاث</p>
+                <a href="article-packing-guide.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="article-card">
+              <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش" class="img-fluid">
+              <div class="article-content">
+                <h4>النقل الموسمي</h4>
+                <p>أفضل أوقات نقل العفش</p>
+                <a href="article-seasonal-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="article-card">
+              <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات" class="img-fluid">
+              <div class="article-content">
+                <h4>نقل المكاتب</h4>
+                <p>نقل المكاتب باحترافية</p>
+                <a href="article-office-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Call to Action -->
+        <div class="row mt-5">
+          <div class="col-lg-12 text-center">
+            <div class="cta-section">
+              <h3>هل تحتاج إلى استشارة مجانية؟</h3>
+              <p>تواصل معنا الآن للحصول على عرض سعر مجاني</p>
+              <div class="cta-buttons">
+                <a href="tel:+96566401171" class="btn btn-primary btn-lg me-3">
+                  <i class="bi bi-telephone"></i> اتصل بنا: 66401171
+                </a>
+                <a href="https://wa.me/+96566401171" class="btn btn-success btn-lg">
+                  <i class="bi bi-whatsapp"></i> واتساب
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- /Related Services Section -->
 
   </main>
 
