--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>دليل أعمالنا - شركة حور لنقل العفش</title>
+  <title>أعمالنا | حور - نقل عفش الكويت</title>
   
   <!-- Enhanced Meta Description -->
   <meta name="description" content="استكشف أعمالنا ومشاريعنا في شركة حور لنقل العفش - خدمات تغليف، فك وتركيب، وسيارات مجهزة لنقل العفش في الكويت">
