--- a/portfolio-office1.html
+++ b/portfolio-office1.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>فك وتركيب باحتراف - شركة حور لنقل العفش</title>
+  <title>فك وتركيب احترافي | حور - نقل عفش الكويت</title>
   
   <!-- Enhanced Meta Description -->
   <meta name="description" content="نملك أدوات خاصة وعمالاً يعرفون جيدًا أسرار فك الأثاث الخشبي والمعدني وتركيبه دون أي ضرر أو خدش.">
@@ -119,7 +119,7 @@
         <!-- Added aria-label for logo link -->
         <a href="index.html" class="logo d-flex align-items-center" aria-label="الصفحة الرئيسية">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="assets/img/logo-rmbg.png" alt="حور لنقل العفش">
+          <img src="assets/img/logo-rmbg.png" alt="حور لنقل العفش - أفضل شركة نقل أثاث في الكويت">
           <!-- <img src="assets/img/logo.png" alt="حور لنقل العفش">  -->
           <h1 class="sitename">حور</h1>
         </a>
@@ -167,7 +167,7 @@
           </div>
           <div class="col-lg-4">
             <div class="text-center">
-              <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب أثاث مكتبي" class="img-fluid rounded-3 shadow-lg">
+              <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب أثاث مكتبي باحترافية - خبراء حور" class="img-fluid rounded-3 shadow-lg">
             </div>
           </div>
         </div>
@@ -360,7 +360,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="portfolio-card fade-in-up">
               <div class="portfolio-image">
-                <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر" loading="lazy">
+                <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر بأعلى جودة - خدمات حور" loading="lazy">
               </div>
               <div class="portfolio-content">
                 <h4>تغليف أثاث فاخر</h4>
@@ -374,7 +374,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="portfolio-card fade-in-up">
               <div class="portfolio-image">
-                <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات مبطنة ومجهزة" loading="lazy">
+                <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات نقل عفش مبطنة ومجهزة - حور" loading="lazy">
               </div>
               <div class="portfolio-content">
                 <h4>سيارات مبطنة ومجهزة</h4>
@@ -388,7 +388,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="portfolio-card fade-in-up">
               <div class="portfolio-image">
-                <img src="assets/img/portfolio/item-7.jpg" alt="خدمات التخزين" loading="lazy">
+                <img src="assets/img/portfolio/item-7.jpg" alt="خدمات التخزين الآمنة - مستودعات حور" loading="lazy">
               </div>
               <div class="portfolio-content">
                 <h4>خدمات التخزين</h4>
